--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts ejec"
   },
   "eslintConfig": {
     "extends": "react-app"
